--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Steven's Digital Resume </title>
-    <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" type="text/css" href="sximenez_digital_resume.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Open+Sans:wght@300;400;500;600&family=Poppins:wght@200;300;400&family=Quicksand:wght@300;400;600&family=Roboto:wght@300;400&family=Sanchez&family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
