--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Steven's Digital Resume </title>
-    <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Open+Sans:wght@300;400;500;600&family=Poppins:wght@200;300;400&family=Quicksand:wght@300;400;600&family=Roboto:wght@300;400&family=Sanchez&family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
@@ -64,21 +64,25 @@
     <section id="resume" class="resume">
         <div class="container">
 
-                <div class="resume-row">
-                        <div class="resume-column">
+                <div class="col-container">
+                        <div class="menu-button col-2 col-s-3">
                             <a href="#about">About</a>
                         </div>
                         
-                        <div class="resume-column">
+                        <div class="menu-button col-2 col-s-3">
                             <a href="#projects">Projects</a>
                         </div>
 
-                        <div class="resume-column">
+                        <div class="menu-button col-2 col-s-3">
                             <a href="#education">Education</a>
                         </div>
 
-                        <div class="resume-column">
+                        <div class="menu-button col-2 col-s-3">
                             <a href="#footer">Contact</a>
+                        </div>
+
+                        <div class="menu-button col-2 col-s-3">
+                            <a href="#footer">FR</a>
                         </div>
 
                 </div>
@@ -105,7 +109,7 @@
                         <br><br>
                         I'm currently engaging in <a href="#projects">front-end development</a> to move to a developer position.
                         <br><br>
-                        I'm increasingly learning about our <a href="https://ilnousfautunplan.fr/" target="_blank">climate emergency</a> and the need of focusing all our efforts on it.
+                        I'm increasingly learning about our <a href="https://ilnousfautunplan.fr/" target="_blank">energy and climate emergency</a>, and the need of focusing all our efforts on it.
                         <br><br>
                         As a result, I look forward to working with climate-oriented organizations in the near future.
                     </p>
@@ -136,7 +140,7 @@
 
                 <div class="col-6 col-s-6 code-background code-text">
                     <p class="code-blue">
-                            <a href="#" target="_blank">.passerelles-occitanie {</a>
+                            .passerelles-occitanie {
                     </p>
                     <p>
                         <span class="code-red">.type: </span><span class="code-green">writing-training;</span>
