--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </div>
 
                         <div class="menu-button col-2 col-s-3">
-                            <a href="french.md">FR</a>
+                            <a href=".french/index.html">FR</a>
                         </div>
 
                 </div>
