--- a/french.html
+++ b/french.html
@@ -1,4 +1,3 @@
----
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -83,7 +82,7 @@
                         </div>
 
                         <div class="menu-button col-2 col-s-3">
-                            <a href="index.html">EN</a>
+                            <a href=".main/index.html">EN</a>
                         </div>
 
                 </div>
@@ -321,4 +320,3 @@
     </footer>
 </body>
 </html>
----
