--- a/french.html
+++ b/french.html
@@ -81,6 +81,10 @@
                             <a href="#footer">Contact</a>
                         </div>
 
+                        <div class="menu-button col-2 col-s-3">
+                            <a href="index.html">EN</a>
+                        </div>
+
                 </div>
 
         </div>
