--- a/french.html
+++ b/french.html
@@ -95,13 +95,13 @@
     <section id="about" class="about">
         <div class="container">
             <h2>
-                About
+                A propos
             </h2>
             <div class="col-container">
                 
                 <div class="col-6 col-s-6">     
                     <p>
-                        Hello, je m'appelle Steven.
+                        Hey, je m'appelle Steven.
                         <br><br>
                         Je viens du milieu de l'e-commerce, où j'ai exercé dans les achats et le service client.
                         <br><br>
@@ -131,7 +131,7 @@
     <section id="projects" class="projects">
         <div class="container">
             <h2>
-                Projects
+                Projets
             </h2>
             
             <div class="col-container">
@@ -248,7 +248,7 @@
     <section id="education" class="education">
         <div class="container">
             <h2>
-                Education
+                Formation
             </h2>
 
             <div class="col-container">
