--- a/french.html
+++ b/french.html
@@ -81,8 +81,10 @@
                             <a href="#footer">Contact</a>
                         </div>
 
-                        <div class="menu-button col-2 col-s-3">
-                            <a href="index.html">EN</a>
+                        <div class="language col-2 col-s-3">
+                            <a href="index.html">
+                                <img src="united-states.png">
+                                 </a>
                         </div>
 
                 </div>
