--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
                             <a href="#footer">Contact</a>
                         </div>
 
-                        <div class="menu-button col-2 col-s-3">
-                            <a href="french.html">FR</a>
+                        <div class="language col-2 col-s-3">
+                            <a href="french.html">
+                                <img src="france.png">
+                                 </a>
                         </div>
 
                 </div>
