--- a/french.html
+++ b/french.html
@@ -83,7 +83,7 @@
 
                         <div class="language col-2 col-s-3">
                             <a href="index.html">
-                                <img src="united-states.png">
+                                <img src="united-states.png" style="height: 25px">
                                  </a>
                         </div>
 
