--- a/french.html
+++ b/french.html
@@ -23,7 +23,7 @@
                 </h1>
                 
                 <p>
-                    <span class="header-subtitle">Développeur Front-end</span>
+                    <span class="header-subtitle">Développeur front-end</span>
                     <span class="header-subtitle">Passionné de langues et de café</span>
                     <span class="header-curly">}</span>
                 </p>
