--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                 <div class="col-container">
                         <div class="menu-button col-2 col-s-3">
-                            <a href="#about">About</a>
+                            <a href="#about">Profile</a>
                         </div>
                         
                         <div class="menu-button col-2 col-s-3">
@@ -97,12 +97,12 @@
     <section id="about" class="about">
         <div class="container">
             <h2>
-                About
+                Profile
             </h2>
             <div class="col-container">
                 
                 <div class="col-6 col-s-6">     
-                    <p>
+                    <!--<p>
                         Hey, I'm Steven.
                         <br><br>
                         I have a sales / customer service background.
@@ -114,10 +114,29 @@
                         I'm increasingly learning about our <a href="https://ilnousfautunplan.fr/" target="_blank">energy and climate emergency</a>, and the need of focusing all our efforts on it.
                         <br><br>
                         As a result, I look forward to working with climate-oriented organizations in the near future.
+                    </p>-->
+                    <p>
+                        <span class="indent profile-text">Hey, I'm Steven.<br>
+                        Welcome to my digital resume.</span>
+                        <span class="profile-text"><span class="code-crimson">Background:</span><br> sales / customer service</span>
+                        <span class="profile-text"><span class="code-crimson">Specialization:</span><br> ecommerce</span>
+                        <span class="profile-text"><span class="code-crimson">Current:</span><br> learning <a href="#education">HTML and CSS</a>, and engaging in <a href="#projects">front-end development</a></span>
+                        <span class="profile-text"><span class="code-crimson">Short-term objective:</span><br> to learn Javascript and seek a developer position</span>
                     </p>
                 </div>
 
                 <div class="col-6 col-s-6">
+                    <p>
+                        <span class="profile-text"><span class="code-crimson">Middle-term objective:</span><br> to become a full-stack developer and work in a climate-oriented organization</span>
+                        <span class="profile-text"><span class="code-crimson">Interests:</span><br>coffee ☕ and languages (I'm currently exploring writing)
+                            <br><br>
+                        I'm also increasingly learning about our <a href="https://ilnousfautunplan.fr/" target="_blank">energy and climate emergency</a></span>
+                        </span>
+                        <span class="profile-text">If you'd like to connect, you can reach me via <a href="https://www.linkedin.com/in/steven-jim%C3%A9nez-sanabria/" target="_blank">Linkedin</a></span>
+                    </p>
+                </div>
+
+                <!--<div class="col-6 col-s-6">
                     <p>
                         I love <a href="#">coffee</a>, it's a fantastic (and fragile) world.
                         <br><br>
@@ -125,7 +144,13 @@
                         <br><br>
                         If you'd like to connect, you can reach me via <a href="https://www.linkedin.com/in/steven-jim%C3%A9nez-sanabria/" target="_blank">Linkedin</a>.
                     </p>
-                </div>
+                    <p>
+                        Interests: coffee ☕ and languages (I'm currently exploring writing)
+                        <br><br>
+                        How to reach me: <a href="https://www.linkedin.com/in/steven-jim%C3%A9nez-sanabria/" target="_blank">Linkedin</a>
+                        <br><br>
+                    </p>
+                </div>-->
             </div>
         </div>
     </section>
