--- a/french.html
+++ b/french.html
@@ -134,7 +134,7 @@
                     <p>
                         <span class="indent profile-text">Salut, je m'appelle Steven.<br>
                         Bienvenue sur mon CV digital.</span>
-                        <span class="profile-text"><span class="code-crimson">Expérience:</span><br> sales / customer service</span>
+                        <span class="profile-text"><span class="code-crimson">Expérience:</span><br> commerce / service client</span>
                         <span class="profile-text"><span class="code-crimson">Spécialisation:</span><br> e-commerce</span>
                         <span class="profile-text"><span class="code-crimson">Actuellement:</span><br> je me forme aux langages <a href="#education">HTML et CSS</a>, et je fais des projets de <a href="#projects">développement front-end</a></span>
                         <span class="profile-text"><span class="code-crimson">Objectif à court-terme:</span><br> me former à Javascript et me tourner vers un poste de développeur</span>
