--- a/french.html
+++ b/french.html
@@ -65,19 +65,19 @@
         <div class="container">
 
                 <div class="col-container">
-                        <div class="menu-button col-2 col-s-3">
+                        <div class="menu-button col-2 col-s-2">
                             <a href="#about">Profil</a>
                         </div>
                         
-                        <div class="menu-button col-2 col-s-3">
+                        <div class="menu-button col-2 col-s-2">
                             <a href="#projects">Projets</a>
                         </div>
 
-                        <div class="menu-button col-2 col-s-3">
+                        <div class="menu-button col-2 col-s-2">
                             <a href="#education">Formation</a>
                         </div>
 
-                        <div class="menu-button col-2 col-s-3">
+                        <div class="menu-button col-2 col-s-2">
                             <a href="#footer">Contact</a>
                         </div>
 
@@ -134,19 +134,19 @@
                     <p>
                         <span class="indent profile-text">Salut, je m'appelle Steven.<br>
                         Bienvenue sur mon CV digital.</span>
-                        <span class="profile-text"><span class="code-crimson">Expérience:</span><br> commerce / service client</span>
-                        <span class="profile-text"><span class="code-crimson">Spécialisation:</span><br> e-commerce</span>
-                        <span class="profile-text"><span class="code-crimson">Actuellement:</span><br> je me forme aux langages <a href="#education">HTML et CSS</a>, et je fais des projets de <a href="#projects">développement front-end</a></span>
-                        <span class="profile-text"><span class="code-crimson">Objectif à court-terme:</span><br> me former à Javascript et me tourner vers un poste de développeur</span>
+                        <span class="profile-text"><span class="code-crimson">Expérience:</span><br> Commerce / service client</span>
+                        <span class="profile-text"><span class="code-crimson">Spécialisation:</span><br> E-commerce</span>
+                        <span class="profile-text"><span class="code-crimson">Actuellement:</span><br> Je me forme aux langages <a href="#education">HTML et CSS</a>, et je fais des projets de <a href="#projects">développement front-end</a></span>
+                        <span class="profile-text"><span class="code-crimson">Objectif à court-terme:</span><br> Me former également à Javascript et me tourner vers un poste de développeur</span>
                     </p>
                 </div>
 
                 <div class="col-6 col-s-6">
                     <p>
-                        <span class="profile-text"><span class="code-crimson">Objectif à moyen-terme:</span><br> devenir développeur full-stack et travailler dans une organisation liée au climat</span>
-                        <span class="profile-text"><span class="code-crimson">Intérêts:</span><br> le café ☕ et les langues (j'explore actuellement l'écriture)
+                        <span class="profile-text"><span class="code-crimson">Objectif à moyen-terme:</span><br> Devenir développeur full-stack et travailler dans une organisation liée au climat</span>
+                        <span class="profile-text"><span class="code-crimson">Intérêts:</span><br> Le café ☕ et les langues (j'explore actuellement l'écriture)
                             <br><br>
-                            Je me renseigne de plus en plus sur <a href="https://ilnousfautunplan.fr/" target="_blank">l'urgence énergétique et climatique</a> et sur le besoin de s'y consacrer à plein temps.</a></span>
+                            Je me renseigne de plus en plus sur <a href="https://ilnousfautunplan.fr/" target="_blank">l'urgence énergétique et climatique</a></span>
                         </span>
                         <span class="profile-text">Si tu le souhaites, tu peux me joindre via mon compte <a href="https://www.linkedin.com/in/steven-jim%C3%A9nez-sanabria/" target="_blank">Linkedin</a></span>
                     </p>
