--- a/index.html
+++ b/index.html
@@ -65,23 +65,23 @@
         <div class="container">
 
                 <div class="col-container">
-                        <div class="menu-button col-2 col-s-3">
+                        <div class="menu-button col-2 col-s-2">
                             <a href="#about">Profile</a>
                         </div>
                         
-                        <div class="menu-button col-2 col-s-3">
+                        <div class="menu-button col-2 col-s-2">
                             <a href="#projects">Projects</a>
                         </div>
 
-                        <div class="menu-button col-2 col-s-3">
+                        <div class="menu-button col-2 col-s-2">
                             <a href="#education">Education</a>
                         </div>
 
-                        <div class="menu-button col-2 col-s-3">
+                        <div class="menu-button col-2 col-s-2">
                             <a href="#footer">Contact</a>
                         </div>
 
-                        <div class="language col-2 col-s-3">
+                        <div class="language col-2 col-s-2">
                             <a href="french.html">
                                 <img src="france.png">
                                  </a>
@@ -118,17 +118,17 @@
                     <p>
                         <span class="indent profile-text">Hey, I'm Steven.<br>
                         Welcome to my digital resume.</span>
-                        <span class="profile-text"><span class="code-crimson">Background:</span><br> sales / customer service</span>
-                        <span class="profile-text"><span class="code-crimson">Specialization:</span><br> ecommerce</span>
-                        <span class="profile-text"><span class="code-crimson">Current:</span><br> learning <a href="#education">HTML and CSS</a>, and engaging in <a href="#projects">front-end development</a></span>
-                        <span class="profile-text"><span class="code-crimson">Short-term objective:</span><br> to learn Javascript and seek a developer position</span>
+                        <span class="profile-text"><span class="code-crimson">Background:</span><br> Sales / customer service</span>
+                        <span class="profile-text"><span class="code-crimson">Specialization:</span><br> Ecommerce</span>
+                        <span class="profile-text"><span class="code-crimson">Current:</span><br> Learning <a href="#education">HTML and CSS</a>, and engaging in <a href="#projects">front-end development</a></span>
+                        <span class="profile-text"><span class="code-crimson">Short-term objective:</span><br> To learn Javascript as well and seek a developer position</span>
                     </p>
                 </div>
 
                 <div class="col-6 col-s-6">
                     <p>
-                        <span class="profile-text"><span class="code-crimson">Middle-term objective:</span><br> to become a full-stack developer and work in a climate-oriented organization</span>
-                        <span class="profile-text"><span class="code-crimson">Interests:</span><br>coffee ☕ and languages (I'm currently exploring writing)
+                        <span class="profile-text"><span class="code-crimson">Middle-term objective:</span><br> To become a full-stack developer and work in a climate-oriented organization</span>
+                        <span class="profile-text"><span class="code-crimson">Interests:</span><br>Coffee ☕ and languages (I'm currently exploring writing)
                             <br><br>
                         I'm also increasingly learning about our <a href="https://ilnousfautunplan.fr/" target="_blank">energy and climate emergency</a></span>
                         </span>
