--- a/french.html
+++ b/french.html
@@ -143,7 +143,7 @@
 
                 <div class="col-6 col-s-6">
                     <p>
-                        <span class="profile-text"><span class="code-crimson">Objectif à moyen-terme:</span><br> Devenir développeur full-stack et travailler dans une organisation liée au climat</span>
+                        <span class="profile-text"><span class="code-crimson">Objectif à moyen-terme:</span><br> Devenir développeur full-stack</span>
                         <span class="profile-text"><span class="code-crimson">Intérêts:</span><br> Le café ☕ et les langues (j'explore actuellement l'écriture)
                             <br><br>
                             Je me renseigne de plus en plus sur <a href="https://ilnousfautunplan.fr/" target="_blank">l'urgence énergétique et climatique</a></span>
