--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                 <div class="col-6 col-s-6">
                     <p>
-                        <span class="profile-text"><span class="code-crimson">Middle-term objective:</span><br> To become a full-stack developer and work in a climate-oriented organization</span>
+                        <span class="profile-text"><span class="code-crimson">Middle-term objective:</span><br> To become a full-stack developer</span>
                         <span class="profile-text"><span class="code-crimson">Interests:</span><br>Coffee ☕ and languages (I'm currently exploring writing)
                             <br><br>
                         I'm also increasingly learning about our <a href="https://ilnousfautunplan.fr/" target="_blank">energy and climate emergency</a></span>
