--- a/french.html
+++ b/french.html
@@ -137,13 +137,13 @@
                         <span class="profile-text"><span class="code-crimson">Expérience:</span><br> Commerce / service client</span>
                         <span class="profile-text"><span class="code-crimson">Spécialisation:</span><br> E-commerce</span>
                         <span class="profile-text"><span class="code-crimson">Actuellement:</span><br> Je me forme aux langages <a href="#education">HTML et CSS</a>, et je fais des projets de <a href="#projects">développement front-end</a></span>
-                        <span class="profile-text"><span class="code-crimson">Objectif à court-terme:</span><br> Me former également à Javascript et me tourner vers un poste de développeur</span>
+                        <span class="profile-text"><span class="code-crimson">Objectif à court-terme:</span><br> Compléter mes projets et me former également à Javascript</span>
                     </p>
                 </div>
 
                 <div class="col-6 col-s-6">
                     <p>
-                        <span class="profile-text"><span class="code-crimson">Objectif à moyen-terme:</span><br> Devenir développeur full-stack</span>
+                        <span class="profile-text"><span class="code-crimson">Objectif à moyen-terme:</span><br> Devenir développeur full-stack et décrocher un poste dans le milieu</span>
                         <span class="profile-text"><span class="code-crimson">Intérêts:</span><br> Le café ☕ et les langues (j'explore actuellement l'écriture)
                             <br><br>
                             Je me renseigne de plus en plus sur <a href="https://ilnousfautunplan.fr/" target="_blank">l'urgence énergétique et climatique</a></span>
