--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
                         <span class="profile-text"><span class="code-crimson">Background:</span><br> Sales / customer service</span>
                         <span class="profile-text"><span class="code-crimson">Specialization:</span><br> Ecommerce</span>
                         <span class="profile-text"><span class="code-crimson">Current:</span><br> Learning <a href="#education">HTML and CSS</a>, and engaging in <a href="#projects">front-end development</a></span>
-                        <span class="profile-text"><span class="code-crimson">Short-term objective:</span><br> To learn Javascript as well and seek a developer position</span>
+                        <span class="profile-text"><span class="code-crimson">Short-term objective:</span><br> To complete my projects and learn Javascript as well</span>
                     </p>
                 </div>
 
                 <div class="col-6 col-s-6">
                     <p>
-                        <span class="profile-text"><span class="code-crimson">Middle-term objective:</span><br> To become a full-stack developer</span>
+                        <span class="profile-text"><span class="code-crimson">Middle-term objective:</span><br> To become a full-stack developer and work in the field</span>
                         <span class="profile-text"><span class="code-crimson">Interests:</span><br>Coffee ☕ and languages (I'm currently exploring writing)
                             <br><br>
                         I'm also increasingly learning about our <a href="https://ilnousfautunplan.fr/" target="_blank">energy and climate emergency</a></span>
