--- a/french.html
+++ b/french.html
@@ -137,7 +137,7 @@
                         <span class="profile-text"><span class="code-crimson">Expérience:</span><br> Commerce / service client</span>
                         <span class="profile-text"><span class="code-crimson">Spécialisation:</span><br> E-commerce</span>
                         <span class="profile-text"><span class="code-crimson">Actuellement:</span><br> Je me forme aux langages <a href="#education">HTML et CSS</a>, et je fais des projets de <a href="#projects">développement front-end</a></span>
-                        <span class="profile-text"><span class="code-crimson">Objectif à court-terme:</span><br> Compléter mes projets et me former également à Javascript</span>
+                        <span class="profile-text"><span class="code-crimson">Objectif à court-terme:</span><br> Compléter mes projets et commencer à me former à Javascript</span>
                     </p>
                 </div>
 
