--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <span class="profile-text"><span class="code-crimson">Background:</span><br> Sales / customer service</span>
                         <span class="profile-text"><span class="code-crimson">Specialization:</span><br> Ecommerce</span>
                         <span class="profile-text"><span class="code-crimson">Current:</span><br> Learning <a href="#education">HTML and CSS</a>, and engaging in <a href="#projects">front-end development</a></span>
-                        <span class="profile-text"><span class="code-crimson">Short-term objective:</span><br> To complete my projects and learn Javascript as well</span>
+                        <span class="profile-text"><span class="code-crimson">Short-term objective:</span><br> To complete my projects and begin learning Javascript</span>
                     </p>
                 </div>
 
