--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <div class="card-top-complete">
             <h3 style="font-size: 2rem;">Responsive Web Design</h3>
           </div>
-          <div class="card-bottom">
+          <div class="card-bottom-inverse">
             <p>freecodecamp.org</p>
           </div>
         </a>
