--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav id="top-nav" class="center-middle border-bottom">
 
         <ul>
-          <li><a href="https://github.com/sximenez" target="_blank">Github</a></li>
+          <li><a href="https://github.com/sximenez" target="_blank">GitHub</a></li>
           <li><a href="https://codepen.io/s_ximenez" target="_blank">CodePen</a></li>
           <li><a href="https://www.linkedin.com/in/steven-jim%C3%A9nez-sanabria/" target="_blank">LinkedIn</a></li>
           <li><a href="mailto:steven.ximenez@gmail.com" href="">Email</a></li>
