--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <p class="cloud">I've always wondered about the inner workings of things</p>
       </div>
 
-      <p style="margin: 5rem 0 2.5rem 0;" class="section-subtitle">Strenghts</p>
+      <p style="margin: 5rem 0 2.5rem 0;" class="section-subtitle">Strengths</p>
 
       <div>
         <p class="cloud">I'm idealistic and optimistic</p>
