--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       
       <h2 class="section-title">About me</h2>
 
-      <div>
+      <div class="cloud-container">
         <p class="cloud">Hi, I'm Steven</p>
         <p class="cloud">I enjoy simple, minimalistic design</p>
         <p class="cloud">I'm pensive</p>
@@ -84,9 +84,9 @@
         <p class="cloud">I've always wondered about the inner workings of things</p>
       </div>
 
-      <p style="margin: 5rem 0 2.5rem 0;" class="section-subtitle">Strenghts</p>
+      <p style="margin: 5rem 0 2.5rem 0;" class="section-subtitle">Strengths</p>
 
-      <div>
+      <div class="cloud-container">
         <p class="cloud">I'm idealistic and optimistic</p>
         <p class="cloud">I don't like to pick sides</p>
         <p class="cloud">I like to connect the dots</p>
@@ -97,7 +97,7 @@
 
       <p style="margin: 5rem 0 2.5rem 0;" class="section-subtitle">Weaknesses</p>
 
-      <div>
+      <div class="cloud-container">
         <p class="cloud">I can be too idealistic sometimes</p>
         <p class="cloud">I find it challenging to do things I don't understand</p>
         <p class="cloud">I struggle to see failure and criticism as constructive</p>
@@ -237,7 +237,7 @@
 
       <div class="card">
               
-        <div class="card-top-white">
+        <div class="card-top-ongoing">
           <h3>Algorithms</h3>
         </div>
         <div class="card-bottom-white">
