--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <ul class="sub-menu">
           <li><a href="#about">About</a></li>
           <li><a href="#fields">Fields</a></li>
+          <li><a href="stories.html">Stories</a></li>
         </ul>
 
       </nav>
@@ -36,7 +37,7 @@
 
         <div>
           <h1><span>.</span>steven<span>-</span>jiménez <span>{</span></h1>
-          <p>Beginner web developer</p>
+          <p>Trainee Web Developer @ <a style="padding: 0;" href="https://www.afpa.fr/centre/centre-de-montpellier-st-jean" target="_blank">AFPA Montpellier</a></p>
           <!--<p style="margin-top: -1.5rem;">Humanist</p>-->
           <!--<p><strong>Beginner web developer,</strong> I come from an operational ecommerce background. I look forward to becoming a full-stack developer in 2023 through formal training. I enjoy simple, minimalistic design.<br><br><span>}</span></p>-->
         </div>
@@ -409,9 +410,9 @@
 
   </section>
 
-  <footer>
+  <footer style="background-color: var(--secondary);">
 
-    <section class="center-middle border-top">
+    <section class="center-middle">
 
       <div class="center-middle">
         <h1><span>.</span>steven<span>-</span>jiménez <span>{</span></h1>
